--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,19 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/rest-bundle": "^2.5",
+        "jms/serializer-bundle": "^3.3",
+        "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/orm-pack": "^1.0",
-        "symfony/yaml": "4.3.*"
+        "symfony/validator": "4.3.*",
+        "symfony/yaml": "4.3.*",
+        "twig/twig": "^2.0",
+        "white-october/pagerfanta-bundle": "^1.2",
+        "willdurand/hateoas-bundle": "^2.0"
     },
     "config": {
         "preferred-install": {
