--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+#
+#    App\Entity\:
+#        resource: '../src/Entity'
+    sensio_framework_extra.view.listener:
+        alias: Sensio\Bundle\FrameworkExtraBundle\EventListener\TemplateListener
