--- a/.env
+++ b/.env
@@ -26,3 +26,9 @@ APP_SECRET=a478ae0969b41901444ff636f44975aa
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=f1d27d6c3c923f9d0025bcc7262552ce
+###< lexik/jwt-authentication-bundle ###
