--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^2.5",
         "jms/serializer-bundle": "^3.3",
+        "lexik/jwt-authentication-bundle": "^2.6",
         "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/options-resolver": "4.3.*",
         "symfony/orm-pack": "^1.0",
         "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*",
