--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -19,9 +19,17 @@ fos_rest:
     view_response_listener: true
   body_converter:
     enabled: true
+    validate: true
+    validation_errors_argument: violations
   serializer:
     serialize_null: true
   format_listener:
     rules:
       - { path: ^/, prefer_extension: true, fallback_format: json, priorities: [ json ] }
   param_fetcher_listener: true
+  exception:
+    enabled: true
+    codes:
+      App\Exception\ResourceValidationException: 400
+    messages:
+      App\Exception\ResourceValidationException: true
