--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,13 @@
 
 api_login_check:
   path: /login_check
+
+app.swagger_ui:
+  path: /doc
+  methods: GET
+  defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+
+app.swagger:
+  path: /doc.json
+  methods: GET
+  defaults: { _controller: nelmio_api_doc.controller.swagger }
