--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
         "symfony/maker-bundle": "^1.11",
         "symfony/web-server-bundle": "4.3.*"
     }
